feat: create avatar component

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -2,6 +2,8 @@
 @import url('./var.css');
 @import url('./reset.css');
 @import url('./global.css');
+@import url('./grid.css');
+@import url('./icons.css');
 
 
 body {
