--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -4,8 +4,8 @@
 
 #app {
   display:flex;
-  justify-content:center;
-  align-items:center;
+  justify-content:flex-start;
+  align-items:flex-start;
   width:100%;
 }
 
@@ -44,4 +44,12 @@ a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
+}
+
+.material-symbols-rounded {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 200,
+  'GRAD' 0,
+  'opsz' 40
 }
